--- a/packages/zoo/package.json
+++ b/packages/zoo/package.json
@@ -2,6 +2,7 @@
   "name": "@tuskdesign/zoo",
   "version": "1.2.0",
   "description": "",
+  "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -9,9 +10,7 @@
     "dist/**"
   ],
   "scripts": {
-    "serve": "node dist/index.js",
-    "build": "tsc --build tsconfig.lib.json",
-    "typecheck": "tsc"
+    "serve": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
